syntax = "proto3";

package yandex.cloud.priv.mdb.opensearch.v1.config;

import "google/protobuf/wrappers.proto";
import "yandex/cloud/priv/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/mdb/opensearch/v1/config;opensearch";

message OpenSearchConfig7 {
  // the maximum number of allowed boolean clauses in a query
  google.protobuf.Int64Value max_clause_count = 3;

  // the percentage or absolute value (10%, 512mb) of heap space that is allocated to fielddata
  string fielddata_cache_size = 4;

  string reindex_remote_whitelist = 6;

  string reindex_ssl_ca_path = 7;  
}

message OpenSearchConfigSet7 {
  OpenSearchConfig7 effective_config = 1 [(required) = true];

  OpenSearchConfig7 user_config = 2;

  OpenSearchConfig7 default_config = 3;
}
