syntax = "proto3";

package yandex.cloud.events.serverless.functions;

import "google/protobuf/duration.proto";
import "google/rpc/status.proto";
import "yandex/cloud/events/common.proto";
import "yandex/cloud/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/events/serverless/functions;functions";
option java_package = "yandex.cloud.api.events.serverless.functions";
option java_outer_classname = "FunctionEvents";

// deprecated: will be removed soon, use *.EventStatus enum instead.
enum FunctionsEventStatus {
  option deprecated = true;

  FUNCTIONS_EVENT_STATUS_UNSPECIFIED = 0;
  STARTED = 1;
  ERROR = 2;
  DONE = 3;
}

message CreateFunction {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
  message EventDetails {
    string function_id = 1 [(required) = true];
  }
}

message UpdateFunction {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
  message EventDetails {
    string function_id = 1 [(required) = true];
  }
}

message DeleteFunction {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
  message EventDetails {
    string function_id = 1 [(required) = true];
  }
}

message CreateFunctionVersion {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
  message EventDetails {
    string function_id = 1 [(required) = true];
    string function_version_id = 2 [(required) = true];
    string runtime = 3 [(required) = true];
    google.protobuf.Duration execution_timeout = 4 [(required) = true];
    string service_account_id = 5;
    int64 original_package_size = 6 [(required) = true];
    int64 runtime_package_size = 7;
    int64 memory = 8;
  }
}

message SetFunctionTag {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
  message EventDetails {
    string function_id = 1 [(required) = true];
    string function_version_id = 2 [(required) = true];
    string tag = 3 [(pattern) = "[a-z][-_0-9a-z]*|[$]latest"];
  }
}

message RemoveFunctionTag {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
  message EventDetails {
    string function_id = 1 [(required) = true];
    string function_version_id = 2 [(required) = true];
    string tag = 3 [(pattern) = "[a-z][-_0-9a-z]*|[$]latest"];
  }
}

message ChangeFunctionAccessBindings {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
  message EventDetails {
    string function_id = 1 [(required) = true];
  }
}

message ChangeScalingPolicy {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
  message EventDetails {
    string function_id = 1 [(required) = true];
    string tag = 2 [(pattern) = "[a-z][-_0-9a-z]*|[$]latest"];
  }
}
